--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <i class="bi bi-facebook"></i>
             </div>
 
-            <a href=""><img src="logo5.png" alt=""></a>
+            <a href=""><img src="images/logo5.png" alt=""></a>
             <div class="nav-links" id="navLinks">
                 <ul>
                     <li><a href="course">Anasayfa</a></li>
@@ -86,19 +86,19 @@
         </P>
         <div class="row">
             <div class="campus-col alin-box">
-                <img src="kapisus.jpg" alt="">
+                <img src="images/kapisus.jpg" alt="">
                 <div class="layer">
                     <h3>KAPI SÜSÜ</h3>
                 </div>
             </div>
             <div class="campus-col alin-box">
-                <img class="mutfak" src="mutfak.jpg" alt="">
+                <img class="mutfak" src="images/mutfak.jpg" alt="">
                 <div class="layer">
                     <h3>MUTFAK AKSESUARI</h3>
                 </div>
             </div>
             <div class="campus-col alin-box">
-                <img src="saat.jpg" alt="">
+                <img src="images/saat.jpg" alt="">
                 <div class="layer">
                     <h3>SAAT</h3>
                 </div>
@@ -115,7 +115,7 @@
         </p>
         <div class="row">
             <div class="facilities-col align-box">
-                <img src="kumbara.jpg" alt="" width="400">
+                <img src="images/kumbara.jpg" alt="" width="400">
                 <h3>KUMBARA</h3>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut dolorem deleniti ipsa suscipit eius
                     numquam vero. Quo eveniet quos repellendus cupiditate iure harum et excepturi alias accusantium,
@@ -123,14 +123,14 @@
             </div>
 
             <div class="facilities-col align-box">
-                <img src="goktug.jpg" alt="" width="400">
+                <img src="images/goktug.jpg" alt="" width="400">
                 <h3>BEBEK ODASI</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, veniam doloribus quod sequi quo sint
                     illum incidunt, recusandae et tempora, optio eligendi vero. Ad alias velit odit praesentium
                     quibusdam. Laboriosam.</p>
             </div>
             <div class="facilities-col align-box">
-                <img class="bebek" src="bebek pano.jpg" alt="" width="400">
+                <img class="bebek" src="images/bebek pano.jpg" alt="" width="400">
                 <h3>BEBEK PANO</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio sint ipsum odio aspernatur autem
                     molestiae ipsa sapiente, quis consequuntur, velit illum! Porro, cumque obcaecati unde cupiditate
@@ -146,7 +146,7 @@
             deleniti reprehenderit cumque.</p>
         <div class="row">
             <div class="testemonials-col align-box">
-                <img src="foto2.jpg" alt="">
+                <img src="images/foto2.jpg" alt="">
                 <div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque debitis veniam non pariatur
                         maxime
@@ -161,7 +161,7 @@
                 </div>
             </div>
             <div class="testemonials-col align-box">
-                <img src="foto1.jpg" alt="">
+                <img src="images/foto1.jpg" alt="">
                 <div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque debitis veniam non pariatur
                         maxime
@@ -177,7 +177,7 @@
                 </div>
             </div>
             <div class="testemonials-col align-box">
-                <img src="greta.jpeg" alt="">
+                <img src="images/greta.jpeg" alt="">
                 <div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque debitis veniam non pariatur
                         maxime
